@@ -1061,11 +1061,6 @@ command to generate the output files.
     <_comment>ECMAScript program</_comment>
     <glob pattern="*.es"/>
   </mime-type>
-  <mime-type type="application/x-dbm">
-    <magic priority="50">
-      <match type="big32" value="0x061561" offset="0"/>
-    </magic>
-  </mime-type>
   <mime-type type="application/x-dc-rom">
     <_comment>Dreamcast ROM</_comment>
     <glob pattern="*.dc"/>
